modules/gdscript/tests/scripts/analyzer/errors/invalid_cast.gd
func test():
	var integer := 1
	print(integer as Array)
	print(integer as Flowde)
	var object := RefCounted.new()
	print(object as int)
